# fugu

./: .hgignore  CMakeLists.txt  CREDITS.txt  FAQ  FILEHEADER.txt  Info.plist  LICENSE.txt  README  README.txt  eclipse-msw-build-release.bat  eclipse-msw-build.bat  fg_logo.xcf  fgestyle.css  fugu_bundle.icns  linux-make-build.sh  osx-make-build.sh  readme.txt  xcode-build.sh
assets/: UV.ppm  fgestyle.css
assets/shaders/: ao_frag.glsl  ao_vert.glsl  overwire.vert  passthru_vert.glsl  phong.frag  phong.vert  phong_vert.glsl  subdivision_fs.glsl  subdivision_gs.glsl  subdivision_vs.glsl
core/: extrude.lua  geometry.lua  help.lua  main.lua  math.lua  mesh.lua  nloop.lua  node.lua  pos.lua  transform.lua  turtle.lua  ui.lua  underscore.lua  underscore_docs.lua  universe.lua  util.lua
doc/doxygen/: Doxyfile  MainDoc.h
doc/html/: _main_doc_8h.html  _main_doc_8h_source.html  annotated.html  bindings_8cpp.html  bindings_8cpp__incl.map  bindings_8cpp__incl.md5  bindings_8h.html  bindings_8h__dep__incl.map  bindings_8h__dep__incl.md5  bindings_8h__incl.md5  bindings_8h_source.html  classA-members.html  classA.html  classB-members.html  classB.html  classC-members.html  classC.html  classExtrudeC-members.html  classExtrudeC.html  classFoo-members.html  classFoo.html  classFooContainer-members.html  classFooContainer.html  classFooProxy-members.html  classFooProxy.html  classMyFace.html  classMyMesh.html  classMyVertex.html  classProxy-members.html  classProxy.html  class_a-members.html  class_a.html  class_b-members.html  class_b.html  class_c-members.html  class_c.html  class_extrude_c-members.html  class_extrude_c.html  class_extrude_c__coll__graph.map  class_extrude_c__coll__graph.md5  (+346 more)
doc/ref/: README.txt  reference.html  reference.tmpl
include/GL/: glew.h
include/fg/: bindings.h  fg.h  functions.h  mesh.h  meshimpl.h  meshoperators.h  meshoperators_vcg.h  universe.h  vec3.h  vertex.h
lib/msw/: libboost_filesystem-mgw34-mt-1_40.lib  libboost_system-mgw34-mt-1_40.lib
lib/osx/: libAntTweakBar.dylib  liblua5.1.dylib  libluabind.dylib  libluabindd.dylib
scripts/ben/: aorta.lua  aorta2.lua  blue.lua  cyl.lua  cyl2.lua  cyl3.lua  cyl4.lua  exsubcirc.lua  ext.lua  ext2.lua  icoshoot.lua  lumpycube.lua  polygonal_chaos.lua  purple.lua  simple.lua  smooth_extrudeandorient.lua  (+7 more)
site/: Makefile  about.html  fugu.css  gallery.html  index.html  reference.html
src/: CMakeLists.txt  fg_config.h.in  run_fugu_osx.sh
src/fg/: CMakeLists.txt  armature.cpp  armature.h  bezierinterpolator.h  bezierinterpolator.inc  bezierinterpolator.inl  bezinterp.h  bezinterp.inl  bindings.cpp  bindings.h  carriercurve.h  carriercurvelinear.cpp  carriercurvelinear.h  carriercurvepiecewisebezier.cpp  carriercurvepiecewisebezier.h  crinterp.h  crinterp.inl  crosssection.h  crosssectioncircular.cpp  crosssectioncircular.h  edge.h  exportmeshnode.h  face.cpp  face.h  fg.cpp  fg.h  functions.cpp  functions.h  functions.inc  functions.inl  generalisedcylinder.cpp  generalisedcylinder.h  geometry.cpp  geometry.h  geometry_wrapper.h  glrenderer.cpp  glrenderer.h  glrenderer_glutprimitives.cpp  glrenderer_vcg.h  interpcrosssec.cpp  (+65 more)
src/fg/gc/: bezinterp.h  bezinterp.inl  carriercurve.h  crinterp.h  crinterp.inl  crosssection.h  crosssectioncircular.cpp  crosssectioncircular.h  frontpoly.cpp  frontpoly.h  generalisedcylinder.cpp  generalisedcylinder.h  generalisedcylinderimpl.cpp  generalisedcylinderimpl.h  impltri.cpp  impltri.h  interpcrosssec.cpp  interpcrosssec.h  interpolator.h  interpolator.inl  lincarrier.cpp  lincarrier.h  lininterp.h  lininterp.inl  morphcrosssec.cpp  morphcrosssec.h  pbezcarrier.cpp  pbezcarrier.h  pbezinterp.h  pbezinterp.inl  pbezinterpdiv.cpp  pbezinterpdiv.h  recsubdiv.cpp  recsubdiv.h  scaleinterpcrosssec.cpp  scaleinterpcrosssec.h  turtle.cpp  turtle.h
src/fge/: CMakeLists.txt  consolewidget.cpp  consolewidget.h  exporter.cpp  exporter.h  fglexer.cpp  fglexer.h  fgv.cpp  fgview.cpp  fgview.cpp.old  fgview.h  highlighter.cpp  highlighter.h  main.cpp  mainwindow.cpp  mainwindow.h  redirect.cpp  redirect.h  trackball.cpp
src/fge/ui/: exportdialog.ui  icon.rc  mainwindow.ui  resources.qrc
src/fge/ui/res/: README.txt
src/fgo/: CMakeLists.txt  fgo.cpp
src/fgv/: CMakeLists.txt  fgv.cpp  shader.h
src/fugu/: CMakeLists.txt  CMakeLists.txt.old  consolewidget.cpp  consolewidget.h  exporter.cpp  exporter.h  fglexer.cpp  fglexer.h  fglexer_old.cpp  fglexer_old.h  fgview.cpp  fgview.h  html_template.h  main.cpp  mainwindow.cpp  mainwindow.h  project.h  qredirector.cpp  qredirector.h  qredirectorimpl_posix.h  qredirectorimpl_win32.h  redirect.cpp  redirect.h  shader.cpp  stdredirector.h  trackball.cpp
src/fugu/ui/: colordialog.ui  exportdialog.ui  mainwindow.ui  resources.qrc
src/misc/: LICENSE
src/misc/basics/: CMakeLists.txt  hello_mesh.cpp  hello_meshbuilder.cpp  hello_universe.cpp  test.lua  view_mesh.cpp  view_universe.cpp
src/misc/ben/: CMakeLists.txt  armature.cpp  bones.cpp  glprims.cpp  graph_test.cpp  graph_test2.cpp  hello_armature.cpp  hello_skin.cpp  hello_skin2.cpp  joints.cpp  lb_refcounted.cpp  luabindstl.cpp  nodetransform_test.cpp
src/misc/iso/: CMakeLists.txt  f.lua  iso.cpp  iso_off.cpp  iso_smooth.cpp  main.cpp  smoothtest.cpp  test_iso.cpp  testheader.h
src/misc/james/: CMakeLists.txt  hello_carrier.cpp  hello_generalised_cylinder.cpp  hello_impl.cpp  hello_morph.cpp  hello_ori.cpp  hello_recsubdiv.cpp  hello_spline.cpp  hello_triangulate.cpp  hello_turtle.cpp
src/misc/luabind/: CMakeLists.txt  lb_refcounted.cpp  luabindstl.cpp
src/misc/tests/: linear_algebra.cpp
src/misc/vcgtests/: CMakeLists.txt  extrude.cpp  extrude_continuous.cpp  extrude_new.cpp  nringtest.cpp  perturb_verts.cpp  splatandraise.cpp  splatter.cpp  walker.cpp
src/tests/: CMakeLists.txt  linear_algebra.cpp
src/vcgext/: README  export_obj_point3d.h
tools/: README.txt  blender_animrepeat.py  blender_fugu_import.py  blender_importfg.py  blender_objseqtoanim.py  blender_smoother.py  fgtemplate.blend  fgtemplate2.blend  fgtemplate2.blend1  fgtemplate2.blend2  fugu.blend
(+247 files in other folders)
