set(ALL_LIBS fg 
	${LUA_LIBS}
	${GL_LIBS} 
	${BOOST_LIBS})

#add_executable(graph_test graph_test.cpp)
#target_link_libraries(graph_test ${ALL_LIBS})

#add_executable(graph_test2 graph_test2.cpp)
#target_link_libraries(graph_test2 ${ALL_LIBS})

#add_executable(nodetransform_test nodetransform_test.cpp trackball.cpp)
#target_link_libraries(nodetransform_test ${ALL_LIBS})

#add_executable(luabindstl luabindstl.cpp)
#target_link_libraries(luabindstl ${LUA_LIBS} ${BOOST_LIBS})

#add_executable(lb_refcounted lb_refcounted.cpp)
#target_link_libraries(lb_refcounted ${LUA_LIBS} ${BOOST_LIBS})